sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value k
	     if(plusPetit(k+1,k))
                          ^AlgCocktailSort1:9: error: not found: value k
	       echange(k+1,k)
                       ^AlgCocktailSort1:14: error: not found: value k
	      	 if(plusPetit(k+1,k))
                              ^AlgCocktailSort1:16: error: not found: value k
	       echange(k+1,k)
                       ^AlgCocktailSort1:22: error: not found: value Faire
Faire
^