sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var inverse:Boolean=true;
var T: Int=getNombreValeurs()
     for(i<-T-2 to 0 by -1)
       {            	
	     if(plusPetit(k+1,k))
	     {	   	 
	       echange(k+1,k)
	       inverse=true
	    } 
	      }
	      for(i<-0 to T-2){
	      	 if(plusPetit(k+1,k))
	     {	   	 
	       echange(k+1,k)
	       inverse=true
	      }
	  
}}
Faire

